force-app/main/default/objects/Routing_Address_and_Edition_Mapping__mdt/Routing_Address_and_Edition_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Routing Address and Edition Mapping</label>
    <pluralLabel>Routing Address and Edition Mappings</pluralLabel>
</CustomObject>