force-app/main/default/objects/Routing_Address_and_Edition_Mapping__mdt/fields/Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Id__c</fullName>
    <label>Brand Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>