force-app/main/default/objects/Routing_Address_and_Edition_Mapping__mdt/fields/Edition_Id__c.field-meta.xml
<CustomField>
    <fullName>Edition_Id__c</fullName>
    <label>Edition Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>