force-app/main/default/objects/Routing_Address_and_Edition_Mapping__mdt/fields/Routing_Address__c.field-meta.xml
<CustomField>
    <fullName>Routing_Address__c</fullName>
    <label>Routing Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>