force-app/main/default/objects/Routing_Address_and_Edition_Mapping__mdt/fields/Series_Id__c.field-meta.xml
<CustomField>
    <fullName>Series_Id__c</fullName>
    <label>Series Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>