force-app/main/default/objects/Routing_Address_and_Edition_Mapping__mdt/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Services</fullName>
                <default>true</default>
                <label>Customer Services</label>
            </value>
            <value>
                <fullName>SalesOps Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>