force-app/main/default/objects/Routing_Address_and_Edition_Mapping__mdt/listViews/All_SC.listView-meta.xml
<ListView>
    <fullName>All_SC</fullName>
    <columns>MasterLabel</columns>
    <columns>Routing_Address__c</columns>
    <columns>Edition_Id__c</columns>
    <columns>Brand_Id__c</columns>
    <columns>Support_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SC</label>
    <language>en_US</language>
</ListView>